@@ -1528,11 +1528,11 @@
                  0 &amp; 0 &amp; 0 &amp; 0 &amp; 0 &amp; 0 \\
                  0 &amp; 0 &amp; 0 &amp; 0 &amp; 0 &amp; 0
                 \end{bmatrix}</me>.  The simplest possible relation of linear dependence on the columns of <m>C</m> comes from using scalars <m>\alpha_4=1</m> and <m>\alpha_5=\alpha_6=0</m> for the free variables in a solution to <m>\homosystem{C}</m>.  The remainder of this solution is <m>\alpha_1=3</m>, <m>\alpha_2=-1</m>, <m>\alpha_3=-3</m>.  This solution gives rise to the polynomial<me>p(x)=3-x-3x^2+x^3=(x-3)(x-1)(x+1)</me>which then has the property that <m>p(A)\vect{x}=\zerovector</m>.</p>
-                <p>No matter how you choose to order the factors of <m>p(x)</m>, the value of <m>k</m> (in the language of <xref ref="theorem-EMHE" acro="EMHE"/> and <xref ref="example-CASE" acro="CASE"/>) is <m>k=2</m>.  For each of the  three possibilities, we list the resulting eigenvector and the associated eigenvalue:<md>
-                    <mrow>(C-3I_5)(C-I_5)\vect{z}&amp;=\colvector{8\\8\\8\\-24\\8}&amp;\lambda&amp;=-1</mrow>
-                    <mrow>(C-3I_5)(C+I_5)\vect{z}&amp;=\colvector{20\\-20\\20\\-40\\20}&amp;\lambda&amp;=1</mrow>
-                    <mrow>(C+I_5)(C-I_5)\vect{z}&amp;=\colvector{32\\16\\48\\-48\\48}&amp;\lambda&amp;=3</mrow>
-                </md>. Note that each of these eigenvectors can be simplified by an appropriate scalar multiple, but we have shown here the actual vector obtained by the product specified in the theorem.</p>
+                <p>No matter how you choose to order the factors of <m>p(x)</m>, the value of <m>k</m> (in the language of <xref ref="theorem-EMHE" acro="EMHE"/> and <xref ref="example-CASE" acro="CASE"/>) is <m>k=2</m>.  For each of the three possibilities, we list the resulting eigenvector, <m>\vect{z}</m>, and the associated eigenvalue<md>
+                    <mrow>\vect{z} &amp;= (C-3I_5)(C-I_5)\vect{x}=\colvector{8\\8\\8\\-24\\8}      &amp; \lambda&amp;=-1</mrow>
+                    <mrow>\vect{z} &amp;= (C-3I_5)(C+I_5)\vect{x}=\colvector{20\\-20\\20\\-40\\20} &amp; \lambda&amp;= 1</mrow>
+                    <mrow>\vect{z} &amp;= (C+I_5)(C-I_5)\vect{x} =\colvector{32\\16\\48\\-48\\48}  &amp; \lambda&amp;= 3</mrow>
+                </md>.These three possibilities for your solution depend on the factor of <m>p(x)</m> that is <em>not</em> shown, and which determines the eigenvalue.  Note that each of these eigenvectors can be simplified by an appropriate scalar multiple, but what we have shown here is the actual vector obtained by the product specified in the theorem.</p>
             </solution>
         </exercise>
         <exercise number="T10" xml:id="exercise-EE-T10">
