@@ -181,6 +181,7 @@ Typo: Sage PSHS, spell "semantics" correctly (Jasmine Mikesell)
 Typo: Sage RRSM, B2 should be b2 (Nathan Schultz)
 Typo: Sage GS, remove a stray comment (Chrissy Safranski)
 Typo: Sage LNS, unbalanced parenthesis (Maggie Hatt)
+Typo: Solution EE.M60, correct and claify eigenvectors (Anna Van Boven)
 
 
 v3.50 2015/12/30
